# golinks

./: db.sqlite  dune-project
_build/: .db  .digest-db  log
_build/default/: golinks.dune-package  golinks.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: golinks.cma  golinks.cmxa  golinks.cmxs
_build/default/lib/.golinks.objs/byte/: golinks.cmi  golinks.cmo  golinks.cmt
_build/default/lib/.golinks.objs/native/: golinks.cmx
_build/default/lib/.merlin-conf/: lib-golinks
_build/default/test/.merlin-conf/: exe-test_golinks
_build/default/test/.test_golinks.eobjs/byte/: dune__exe__Test_golinks.cmi  dune__exe__Test_golinks.cmti
_build/default/test/.test_golinks.eobjs/native/: dune__exe__Test_golinks.cmx
_build/install/default/lib/golinks/: META  dune-package  opam
lib/: dune  queries.ml  templates.eml.ml
test/: dune
